api-start/rolling-update/api-start-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-start
  namespace: openmsa    
  
  labels:
    app: api-start
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-start
  template:
    metadata:
      
      labels:
        app: api-start     
      

    spec:
      containers:
        - name: api-start
          image: oscka/api-start
          ports:
          - name: http
            containerPort: 8080
