api-start/rolling-update/api-start-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-start-svc
  namespace: fms
spec:
  selector:
    app: api-start
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
